--- a/css/style.css
+++ b/css/style.css
@@ -94,22 +94,23 @@ header nav .li-hebergements:hover, .li-activites:hover {
 }
 
 /****** Formulaire de recherche ***********/
-.titre-formulaire-de-recherche h1 {
+.formulaire-de-recherche h1 {
     font-size: 22px;
     font-weight: 700;
+    margin-top: 30px;
 }
 
-.titre-formulaire-de-recherche p {
+.formulaire-de-recherche p {
     font-size: 16px;
 }
 
-.titre-formulaire-de-recherche h1, p {
+.formulaire-de-recherche h1, p {
     line-height: 0.75em;
 }
 
 form {
    display: flex;;
-   padding: 30px 0px 30px 0px;
+   margin: 30px 0px 30px 0px;
 }
 
 label {
@@ -153,6 +154,62 @@ input[value="Rechercher"] {
     border-radius: 0px 15px 15px 0px;
     padding: 15px 16px 15px 16px;
     cursor: pointer;
+}
+
+/****** Filtres ***********/
+.filtres {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.filtres p {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.filtres li {
+    font-size: 17px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    border: solid;
+    border-radius: 30px;
+    border-color: #D9D9D9;
+    border-width: 2px;
+    padding: 12px 18px 12px 18px;
+    cursor: pointer;
+}
+
+.filtres li:hover {
+    background-color: var(--filter-bg-color);
+}
+
+.filtres .fa-solid {
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.info {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 20px 0px 20px 0px;
+}
+
+.info p {
+    font-size: 16px;
+    font-weight: 400px;
+}
+
+.fa-solid.fa-info {
+    border: solid;
+    border-color: #D9D9D9;
+    border-width: 1px;
+    border-radius: 50%;
+    padding: 6px 9px 6px 9px;
+    font-size: 10px;
+    margin-right: 10px;
 }
 
 /****** Hebergements And Populaires ***********/
