--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,33 @@ input[value="Rechercher"] {
     width: 65%;
 }
 
+.hebergements-cards .card {
+    display: flex;
+    flex-direction: column;
+    width: 33%;
+    margin-top: 33px;
+}
+
+.hebergements-cards .card-content {
+    flex-direction: column;
+    padding: 0px 0px 10px 10px;
+}
+
+.hebergements-cards img {
+    width: 100%;
+    height: 114px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.hebergements, .populaires .card-subtitle {
+    font-size: 14px;
+}
+
+.hebergements .fa-star {
+    font-size: 14px;
+}
+
 /****** Populaires ***********/
 .populaires {
     width: 32%;
